Changed file path to be one of members in ObjectBase; changed how EditorWindow organize objects; implemented change directory in EditorWindow

--- a/src/gui/EditorWindow.ui
+++ b/src/gui/EditorWindow.ui
@@ -120,6 +120,7 @@
     </property>
     <addaction name="actionNew"/>
     <addaction name="actionOpen"/>
+    <addaction name="actionChangeDirectory"/>
    </widget>
    <addaction name="menuFile_Object"/>
   </widget>
@@ -132,6 +133,11 @@
   <action name="actionOpen">
    <property name="text">
     <string>Open...</string>
+   </property>
+  </action>
+  <action name="actionChangeDirectory">
+   <property name="text">
+    <string>Change Directory...</string>
    </property>
   </action>
  </widget>
