--- a/src/gui/EditorWindow.ui
+++ b/src/gui/EditorWindow.ui
@@ -48,6 +48,12 @@
           <verstretch>0</verstretch>
          </sizepolicy>
         </property>
+        <property name="dragEnabled">
+         <bool>true</bool>
+        </property>
+        <property name="dragDropMode">
+         <enum>QAbstractItemView::DragOnly</enum>
+        </property>
         <attribute name="headerVisible">
          <bool>false</bool>
         </attribute>
