--- a/src/gui/SimpleTextGenerator/STGEditor.ui
+++ b/src/gui/SimpleTextGenerator/STGEditor.ui
@@ -66,7 +66,7 @@
        </property>
        <layout class="QVBoxLayout" name="verticalLayout_3">
         <item>
-         <widget class="QListWidget" name="aliasListWidget">
+         <widget class="STGAliasListWidget" name="aliasListWidget">
           <property name="sizePolicy">
            <sizepolicy hsizetype="Expanding" vsizetype="Preferred">
             <horstretch>0</horstretch>
@@ -108,6 +108,11 @@
    <extends>QWidget</extends>
    <header>src/gui/SimpleTextGenerator/STGFragmentInputWidget.h</header>
    <container>1</container>
+  </customwidget>
+  <customwidget>
+   <class>STGAliasListWidget</class>
+   <extends>QListWidget</extends>
+   <header>src/gui/SimpleTextGenerator/STGAliasListWidget.h</header>
   </customwidget>
  </customwidgets>
  <resources/>
