--- a/src/gui/SimpleParser/SPRuleInputWidget.ui
+++ b/src/gui/SimpleParser/SPRuleInputWidget.ui
@@ -41,7 +41,7 @@
    <item>
     <widget class="QGroupBox" name="groupBox_2">
      <property name="title">
-      <string>GroupBox</string>
+      <string>Patterns</string>
      </property>
      <layout class="QVBoxLayout" name="verticalLayout_2">
       <item>
