Fixed issue of missing translations in import dialog; added auto switch when new object is added to side context

--- a/src/gui/EditorWindow.ui
+++ b/src/gui/EditorWindow.ui
@@ -167,6 +167,7 @@
     <addaction name="actionOpen"/>
     <addaction name="actionSave"/>
     <addaction name="actionChangeDirectory"/>
+    <addaction name="actionReloadDirectory"/>
     <addaction name="menuCapture"/>
    </widget>
    <widget class="QMenu" name="menuMisc">
@@ -241,6 +242,11 @@
   <action name="actionNewTextGenerator">
    <property name="text">
     <string>Text Generator</string>
+   </property>
+  </action>
+  <action name="actionReloadDirectory">
+   <property name="text">
+    <string>Reload from directory</string>
    </property>
   </action>
  </widget>
