--- a/src/gui/TransformPassView/TransformPassViewWidget.ui
+++ b/src/gui/TransformPassView/TransformPassViewWidget.ui
@@ -53,17 +53,29 @@
           <enum>Qt::Vertical</enum>
          </property>
          <widget class="QSplitter" name="splitter">
+          <property name="minimumSize">
+           <size>
+            <width>0</width>
+            <height>100</height>
+           </size>
+          </property>
           <property name="orientation">
            <enum>Qt::Horizontal</enum>
           </property>
-          <widget class="QGroupBox" name="inputDataGroupBox">
-           <property name="title">
-            <string>Input</string>
+          <widget class="StackedWidgetWithComboBox" name="inputDataWidgets">
+           <property name="minimumSize">
+            <size>
+             <width>100</width>
+             <height>0</height>
+            </size>
            </property>
           </widget>
-          <widget class="QGroupBox" name="outputDataGroupBox">
-           <property name="title">
-            <string>Output</string>
+          <widget class="StackedWidgetWithComboBox" name="outputDataWidgets">
+           <property name="minimumSize">
+            <size>
+             <width>100</width>
+             <height>0</height>
+            </size>
            </property>
           </widget>
          </widget>
@@ -178,6 +190,14 @@
    </item>
   </layout>
  </widget>
+ <customwidgets>
+  <customwidget>
+   <class>StackedWidgetWithComboBox</class>
+   <extends>QFrame</extends>
+   <header>src/gui/StackedWidgetWithComboBox.h</header>
+   <container>1</container>
+  </customwidget>
+ </customwidgets>
  <resources/>
  <connections/>
 </ui>
