SimpleParser is now pass-oriented; SimpleParserEditor now represent parenting relationship with a tree view

--- a/src/gui/SimpleParser/SPRuleInputWidget.ui
+++ b/src/gui/SimpleParser/SPRuleInputWidget.ui
@@ -28,6 +28,9 @@
    </property>
    <item>
     <widget class="QGroupBox" name="parentGroupBox">
+     <property name="enabled">
+      <bool>false</bool>
+     </property>
      <property name="title">
       <string>Parents</string>
      </property>
